feat: Add last year datas
작년 하반기의 거래 내역을 추가로 수집
최근 거래 내역을 통해 알아보는 것에 의미가 있으므로
더이상의 데이터 수집은 하지 않기로 결정

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
       "11680\n",
       "11710\n",
       "11740\n",
-      "[['66,579', '42.29'], ['101,473', '59.74'], ['84,832', '84.9939'], ['104,650', '84.8985'], ['43,384', '38.996'], ['49,702', '39.975'], ['99,491', '84.9625'], ['76,500', '59.975'], ['82,000', '84.997'], ['69,000', '59.996'], ['89,000', '76.65'], ['110,700', '84.97'], ['50,500', '49.92'], ['87,000', '59.96'], ['125,000', '59.5'], ['120,000', '59.97'], ['120,000', '59.97'], ['133,000', '59.97'], ['93,300', '74.9982'], ['110,000', '59.93'], ['140,000', '84.9243'], ['145,000', '84.94'], ['115,000', '59.76'], ['1,000,000', '200.93'], ['395,000', '101.99'], ['305,000', '84.97'], ['392,000', '84.98'], ['262,000', '84.5978'], ['168,658', '59.9742'], ['182,388', '59.9742'], ['250,000', '84.9642'], ['60,600', '49.795'], ['90,135', '84.1946'], ['112,200', '98.4933'], ['102,998', '84.1946']]\n"
+      "[['66,579', '42.29'], ['101,473', '59.74'], ['84,832', '84.9939'], ['104,650', '84.8985'], ['43,384', '38.996'], ['49,702', '39.975'], ['99,491', '84.9625'], ['76,500', '59.975'], ['82,000', '84.997'], ['69,000', '59.996'], ['89,000', '76.65'], ['85,186', '59.96'], ['50,500', '49.92'], ['87,000', '59.96'], ['125,000', '59.5'], ['120,000', '59.97'], ['120,000', '59.97'], ['133,000', '59.97'], ['93,300', '74.9982'], ['110,000', '59.93'], ['140,000', '84.9243'], ['145,000', '84.94'], ['115,000', '59.76'], ['1,000,000', '200.93'], ['395,000', '101.99'], ['305,000', '84.97'], ['392,000', '84.98'], ['178,000', '59.9751'], ['168,658', '59.9742'], ['182,388', '59.9742'], ['250,000', '84.9642'], ['60,600', '49.795'], ['90,135', '84.1946'], ['112,200', '98.4933'], ['102,998', '84.1946']]\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
       "8      82,000   84.997\n",
       "9      69,000   59.996\n",
       "10     89,000    76.65\n",
-      "11    110,700    84.97\n",
+      "11     85,186    59.96\n",
       "12     50,500    49.92\n",
       "13     87,000    59.96\n",
       "14    125,000     59.5\n",
@@ -154,7 +154,7 @@
       "24    395,000   101.99\n",
       "25    305,000    84.97\n",
       "26    392,000    84.98\n",
-      "27    262,000  84.5978\n",
+      "27    178,000  59.9751\n",
       "28    168,658  59.9742\n",
       "29    182,388  59.9742\n",
       "30    250,000  84.9642\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
       "8    82,000   84.997\n",
       "9    69,000   59.996\n",
       "10   89,000    76.65\n",
-      "11  110,700    84.97\n",
+      "11   85,186    59.96\n",
       "12   50,500    49.92\n",
       "13   87,000    59.96\n",
       "14  125,000     59.5\n",
@@ -210,7 +210,7 @@
       "24  395,000   101.99\n",
       "25  305,000    84.97\n",
       "26  392,000    84.98\n",
-      "27  262,000  84.5978\n",
+      "27  178,000  59.9751\n",
       "28  168,658  59.9742\n",
       "29  182,388  59.9742\n",
       "30  250,000  84.9642\n",
@@ -229,6 +229,105 @@
     "df.drop([23], axis=0, inplace=True)\n",
     "\n",
     "print(df.head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method NDFrame.head of       price     space\n",
+      "0   105,000     59.99\n",
+      "1    90,000     84.95\n",
+      "2    75,482     59.97\n",
+      "3    87,000     59.94\n",
+      "4   127,850     59.97\n",
+      "5   101,500     43.27\n",
+      "6   127,000     59.97\n",
+      "7   102,500     59.99\n",
+      "8   120,000      84.9\n",
+      "9   590,000   175.853\n",
+      "10   86,500    30.726\n",
+      "11   85,500   36.5219\n",
+      "12  300,340     84.95\n",
+      "13  320,000     84.98\n",
+      "14  365,297  112.8548\n",
+      "15  230,000   84.9956\n",
+      "16  247,000   84.7509>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 더 많은 데이터의 수집 필요\n",
+    "# 기존 데이터 수집 함수를 사용해서 작년 하반기의 데이터를 추가로 수집\n",
+    "\n",
+    "new_datas = []\n",
+    "\n",
+    "def get_datas(region_code):\n",
+    "    # 7월부터 9월\n",
+    "    for i in range(7,10):\n",
+    "        url = f'http://openapi.molit.go.kr/OpenAPI_ToolInstallPackage/service/rest/RTMSOBJSvc/getRTMSDataSvcSilvTrade?serviceKey={api_keys.encoding_key}&LAWD_CD={region_code}&DEAL_YMD=20220{i}'\n",
+    "        response = urlopen(url)\n",
+    "        result = BeautifulSoup(response,'xml')\n",
+    "        items = result.find_all('item')\n",
+    "        data = []\n",
+    "        for item in items:\n",
+    "            price = item.find('거래금액').text\n",
+    "            space = item.find('전용면적').text\n",
+    "            data = [price, space]\n",
+    "        if(len(data) != 0):\n",
+    "            new_datas.append(data)\n",
+    "    # 10월부터 12월\n",
+    "    for i in range(10,13):\n",
+    "        url = f'http://openapi.molit.go.kr/OpenAPI_ToolInstallPackage/service/rest/RTMSOBJSvc/getRTMSDataSvcSilvTrade?serviceKey={api_keys.encoding_key}&LAWD_CD={region_code}&DEAL_YMD=2022{i}'\n",
+    "        response = urlopen(url)\n",
+    "        result = BeautifulSoup(response,'xml')\n",
+    "        items = result.find_all('item')\n",
+    "        data = []\n",
+    "        for item in items:\n",
+    "            price = item.find('거래금액').text\n",
+    "            space = item.find('전용면적').text\n",
+    "            data = [price, space]\n",
+    "        if(len(data) != 0):\n",
+    "            new_datas.append(data)\n",
+    "            \n",
+    "for code in region_codes:\n",
+    "    get_datas(code)\n",
+    "\n",
+    "df2 = pd.DataFrame(new_datas, columns=['price','space'])\n",
+    "\n",
+    "print(df2.head)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "concat() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# 두 데이터 프레임 결합\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m new_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mconcat(df,df2)\n\u001b[0;32m      5\u001b[0m \u001b[39mprint\u001b[39m(new_df\u001b[39m.\u001b[39mhead)\n",
+      "\u001b[1;31mTypeError\u001b[0m: concat() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "# 두 데이터 프레임 결합\n",
+    "\n",
+    "new_df = pd.concat([df,df2])\n",
+    "\n",
+    "print(new_df.head)"
    ]
   }
  ],
